--- a/people.html
+++ b/people.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MindMingle | Start</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="icon" type="image/x-icon" href="/img/mindminglev1.jpg">
+    <title>Document</title>
 </head>
 <body>
     
