--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="icon" type="image/x-icon" href="/img/mindminglev1.jpg">
 </head>
 <body>
-    
+    <div class="topbar">
+        <img src="/img/mindminglev1.jpg" alt="">
+    </div>
+
+
+    <div class="container">
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+    </div>
 </body>
 </html>
