--- a/index.html
+++ b/index.html
@@ -6,20 +6,38 @@
     <title>Start | Mindmingle</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" type="image/x-icon" href="/img/mindminglev1.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="topbar">
-        <img src="/img/mindminglev1.jpg" alt="">
-    </div>
-
-
     <div class="container">
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
+        <div class="topbar">
+            <img src="/img/mindminglev1.jpg" alt="">
+            <h1>MindMingle</h1>
+            <div class="icons">
+                <a href="index.html"><span class="material-symbols-outlined">home</span></a>
+            </div>
+        </div>
+        <div class="card" id="sc1">
+            <div class="button">Läs mer</div>
+            <div class="image"></div>
+        </div>
+        <div class="card" id="sc2">
+            <div class="button">Läs mer</div>
+            <div class="image"></div>
+        </div>
+        <div class="card" id="sc3">
+            <div class="button">Läs mer</div>
+            <div class="image"></div>
+        </div>
+        <div class="card" id="sc4">
+            <div class="button">Läs mer</div>
+            <div class="image"></div>
+        </div>
+        <aside class="as1">aside</aside>
+        <aside class="as2">aside</aside>
     </div>
 </body>
 </html>
