--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <img src="/img/mindminglev1.jpg" alt="">
             <h1>MindMingle</h1>
             <div class="icons">
+                <a href=""><span class="material-symbols-outlined">person</span></a>
                 <a href="index.html"><span class="material-symbols-outlined">home</span></a>
             </div>
         </div>
@@ -36,8 +37,8 @@
             <div class="button">Läs mer</div>
             <div class="image"></div>
         </div>
-        <aside class="as1">aside</aside>
-        <aside class="as2">aside</aside>
+        <aside class="as1">reklam</aside>
+        <aside class="as2">reklam</aside>
     </div>
 </body>
 </html>
