--- a/index.html
+++ b/index.html
@@ -22,23 +22,53 @@
             </div>
         </div>
         <div class="card" id="sc1">
-            <div class="button">Läs mer</div>
-            <div class="image"></div>
+            <div class="button"><a href="https://www.google.com" class="link">Forum</a></div>
+            <div class="image">
+                
+                <h2 id="latest">Senaste foruminlägg:</h2>
+                <div class="question1">
+                    <h2>Jag känner mig överväldigad – hur hittar jag balans</h2>
+                    <p>Den senaste tiden har allt känts som för mycket. Jag har svårt 
+                        att hantera stress, och det känns som att jag aldrig riktigt får 
+                        tid för återhämtning. Tankarna snurrar och jag vet inte var jag ska 
+                        börja för att må bättre. Har någon av er varit i en liknande situation? 
+                        Vad hjälpte er att hitta balans igen? Jag skulle verkligen uppskatta råd 
+                        eller erfarenheter från er som gått igenom något liknande. 💬💚
+
+                    </p>
+                </div>
+            </div>
         </div>
         <div class="card" id="sc2">
-            <div class="button">Läs mer</div>
-            <div class="image"></div>
+            <div class="button"><a href="https://hittapsykolog.html" class="link">Blablabla</a></div>
+            <div class="image">
+                <h2 id="message">Nytt meddelande: </h2>
+                <div class="message">
+                    <h2>Support</h2>
+                    <p class="newmessage">
+                        Behöver du prata med någon? Kontakta 
+                        oss här så kopplar vi dig till någon av våra psykologer.
+                    </p>
+                </div>
+            </div>
         </div>
         <div class="card" id="sc3">
-            <div class="button">Läs mer</div>
+            <div class="button"><a href="https://www.google.com" class="link">Blablabla</a></div>
             <div class="image"></div>
         </div>
         <div class="card" id="sc4">
-            <div class="button">Läs mer</div>
+            <div class="button"><a href="https://www.google.com" class="link">Blablabla</a></div>
             <div class="image"></div>
         </div>
-        <aside class="as1">reklam</aside>
-        <aside class="as2">reklam</aside>
+        <aside class="as1">
+            <img src="/img/savr.png" alt="">
+            <img src="/img/prisjakt.png" alt="">
+        </aside>
+        <aside class="as2">
+            <img src="/img/gambling.png" alt="">
+        </aside>
+        <footer><a href="">meow</a></footer>
     </div>
 </body>
 </html>
+
