--- a/people.html
+++ b/people.html
@@ -5,9 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Utforska | Mindmingle</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/img/mindminglev1.jpg">
 </head>
 <body>
-    
+    <div class="people">
+        <div class="topbar">
+            <img src="/img/mindminglev1.jpg" alt="">
+            <h1>MindMingle</h1>
+            <div class="icons">
+                <a href=""><span class="material-symbols-outlined">person</span></a>
+                <a href="index.html"><span class="material-symbols-outlined">home</span></a>
+            </div>
+        </div>
+        <div class="card" id="pr1">
+        </div>
+        <div class="card" id="pr2"></div>
+        <div class="card"id="pr3"></div>
+        <div class="card"id="pr4"></div>
+        <div class="card"id="pr5"></div>
+        <div class="card"id="pr6"></div>
+        <div class="card"id="pr7"></div>
+        <div class="card"id="pr8"></div>
+        <div class="card"id="pr9"></div>
+        <div class="card"id="pr10"></div>
+        <div class="card"id="pr11"></div>
+        <div class="card"id="pr12"></div>
+    </div>
 </body>
 </html>
