--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
             </div>
         </div>
         <div class="card" id="sc1">
-            <div class="button"><a href="https://www.google.com" class="link">Forum</a></div>
+            <div class="button"><a href="forum.html" class="link">Forum</a></div>
             <div class="image">
                 
                 <h2 id="latest">Senaste foruminlägg:</h2>
                 <div class="question1">
-                    <h2>Jag känner mig överväldigad – hur hittar jag balans</h2>
+                    <h2>Jag känner mig överväldigad – hur hittar jag balans</h2> <hr>
                     <p>Den senaste tiden har allt känts som för mycket. Jag har svårt 
                         att hantera stress, och det känns som att jag aldrig riktigt får 
                         tid för återhämtning. Tankarna snurrar och jag vet inte var jag ska 
@@ -40,11 +40,11 @@
             </div>
         </div>
         <div class="card" id="sc2">
-            <div class="button"><a href="https://hittapsykolog.html" class="link">Blablabla</a></div>
+            <div class="button"><a href="people.html" class="link">Blablabla</a></div>
             <div class="image">
                 <h2 id="message">Nytt meddelande: </h2>
                 <div class="message">
-                    <h2>Support</h2>
+                    <h2>Support</h2> <hr>
                     <p class="newmessage">
                         Behöver du prata med någon? Kontakta 
                         oss här så kopplar vi dig till någon av våra psykologer.
@@ -53,12 +53,30 @@
             </div>
         </div>
         <div class="card" id="sc3">
-            <div class="button"><a href="https://www.google.com" class="link">Blablabla</a></div>
-            <div class="image"></div>
+            <div class="button"><a href="dittkonto.html" class="link">Blablabla</a></div>
+            <div class="image">
+                <h2 id="account">Välkommen!</h2>
+                <div class="message">
+                    <h2>Gör färdigt ditt konto</h2><hr></hr>
+                    <p>
+                        Välkommen till MindMingle! Gå till "ditt konto" 
+                        och följ intstruktionerna för att göra klart ditt konto 
+                    </p>
+                </div>
+
+            </div>
         </div>
         <div class="card" id="sc4">
-            <div class="button"><a href="https://www.google.com" class="link">Blablabla</a></div>
-            <div class="image"></div>
+            <div class="button"><a href="vanner.html" class="link">Blablabla</a></div>
+            <div class="image">
+                <h2 id="friends">Dina vänner</h2>
+                <div class="message">
+                    <h2>Du har 0 vänner</h2><hr>
+                    <p>
+                        Följ den här länken för att hitta vänförslag
+                    </p>
+                </div>     
+            </div>
         </div>
         <aside class="as1">
             <img src="/img/savr.png" alt="">
@@ -66,8 +84,13 @@
         </aside>
         <aside class="as2">
             <img src="/img/gambling.png" alt="">
+            <img src="/img/wellobe.png" alt="">
         </aside>
-        <footer><a href="">meow</a></footer>
+        <footer>
+            <h3><a href="about.html">Om oss</a></h3>
+            <h3>FAQ</h3>
+            <h3>Kundservice</h3>
+        </footer>
     </div>
 </body>
 </html>
