Gjort färdigt resten av sidorna
Lade till allting på about.html och alla personer på people.html. Kollade kontrasten och fixade till textfärgen så att contrast checkern blev glad och korrigerade små fel som css-valideringen hittade

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="/img/mindminglev1.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div class="card" id="sc2">
-            <div class="button"><a href="people.html" class="link">Blablabla</a></div>
+            <div class="button"><a href="people.html" class="link">Kontakta psykolog</a></div>
             <div class="image">
                 <h2 id="message">Nytt meddelande: </h2>
                 <div class="message">
@@ -53,11 +53,11 @@
             </div>
         </div>
         <div class="card" id="sc3">
-            <div class="button"><a href="dittkonto.html" class="link">Blablabla</a></div>
+            <div class="button"><a href="dittkonto.html" class="link">Färdigställ konto</a></div>
             <div class="image">
                 <h2 id="account">Välkommen!</h2>
                 <div class="message">
-                    <h2>Gör färdigt ditt konto</h2><hr></hr>
+                    <h2>Gör färdigt ditt konto</h2><hr>
                     <p>
                         Välkommen till MindMingle! Gå till "ditt konto" 
                         och följ intstruktionerna för att göra klart ditt konto 
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div class="card" id="sc4">
-            <div class="button"><a href="vanner.html" class="link">Blablabla</a></div>
+            <div class="button"><a href="vanner.html" class="link">Hitta vänner</a></div>
             <div class="image">
                 <h2 id="friends">Dina vänner</h2>
                 <div class="message">
