--- a/people.html
+++ b/people.html
@@ -22,18 +22,92 @@
             </div>
         </div>
         <div class="card" id="pr1">
+            <div class="button"><a class="link">Kontakta</a></div>
+            <div class="image">
+                <h2 id="latest">Lena Bergström</h2>
+                <div class="description">Specialist inom kognitiv beteendeterapi (KBT) med fokus på ångest och stresshantering.</div>
+            </div>
         </div>
-        <div class="card" id="pr2"></div>
-        <div class="card"id="pr3"></div>
-        <div class="card"id="pr4"></div>
-        <div class="card"id="pr5"></div>
-        <div class="card"id="pr6"></div>
-        <div class="card"id="pr7"></div>
-        <div class="card"id="pr8"></div>
-        <div class="card"id="pr9"></div>
-        <div class="card"id="pr10"></div>
-        <div class="card"id="pr11"></div>
-        <div class="card"id="pr12"></div>
+        <div class="card" id="pr2">
+            <div class="button"><a class="link">Kontakta</a></div>
+            <div class="image">
+                <h2 id="latest">Martin Sjögren</h2>
+                <div class="description">Legitimerad psykolog som arbetar med trauma och PTSD med hjälp av EMDR-teknik.</div>
+            </div>
+        </div>
+        <div class="card"id="pr3">
+            <div class="button"><a class="link">Kontakta</a></div>
+            <div class="image">
+                <h2 id="latest">Sara Lindahl</h2>
+                <div class="description">Terapeut med erfarenhet av parterapi och relationella problem.</div>
+            </div>
+
+        </div>
+        <div class="card"id="pr4">
+            <div class="button"><a class="link">Kontakta</a></div>
+            <div class="image">
+                <h2 id="latest">Jonas Ekström</h2>
+                <div class="description">Psykolog inriktad på depression och livskriser genom existentiell terapi.</div>
+            </div>
+
+        </div>
+        <div class="card"id="pr5">
+            <div class="button"><a class="link">Kontakta</a></div>
+            <div class="image">
+                <h2 id="latest">Emma Wiklund</h2>
+                <div class="description">Barn- och ungdomspsykolog med fokus på ADHD, autism och skolrelaterade problem.</div>
+            </div>
+
+        </div>
+        <div class="card"id="pr6">
+            <div class="button"><a class="link">Kontakta</a></div>
+            <div class="image">
+                <h2 id="latest">David Karlsson</h2>
+                <div class="description">Terapeut med en holistisk syn på mental hälsa, specialiserad på mindfulness och ACT.</div>
+            </div>
+        </div>
+        <div class="card"id="pr7">
+            <div class="button"><a class="link">Kontakta</a></div>
+            <div class="image">
+                <h2 id="latest">Niklas Andersson</h2>
+                <div class="description">Legitimerad psykolog som hjälper klienter med självkänsla och självbildsproblem.</div>
+            </div>
+        </div>
+        <div class="card"id="pr8">
+            <div class="button"><a class="link">Kontakta</a></div>
+            <div class="image">
+                <h2 id="latest">Hanna Forsberg</h2>
+                <div class="description">Arbetar med prestationspsykologi och stöd för högpresterande individer.</div>
+            </div>
+        </div>
+        <div class="card"id="pr9">
+            <div class="button"><a class="link">Kontakta</a></div>
+            <div class="image">
+                <h2 id="latest">Elin Magnusson</h2>
+                <div class="description">Specialist inom beroendeproblematik och återhämtning.</div>
+            </div>
+        </div>
+        <div class="card"id="pr10">
+            <div class="button"><a class="link">>Kontakta</a></div>
+            <div class="image">
+                <h2 id="latest">Karin Olsson</h2>
+                <div class="description">Legitimerad psykolog som erbjuder stöd vid sorg och förlust.</div>
+            </div>
+        </div>
+        <div class="card"id="pr11">
+            <div class="button"><a class="link">Kontakta</a></div>
+            <div class="image">
+                <h2 id="latest">Mats Jansson</h2>
+                <div class="description">Terapeut som arbetar med att hantera ilska och förbättra kommunikationsförmåga.</div>
+            </div>
+        </div>
+        <div class="card"id="pr12">
+            <div class="button"><a class="link">Kontakta</a></div>
+            <div class="image">
+                <h2 id="latest">Sofia Sandberg</h2>
+                <div class="description">Psykolog med inriktning på postpartum-depression och stöd för nyblivna föräldrar.</div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
