--- a/people.html
+++ b/people.html
@@ -88,7 +88,7 @@
             </div>
         </div>
         <div class="card"id="pr10">
-            <div class="button"><a class="link">>Kontakta</a></div>
+            <div class="button"><a class="link">Kontakta</a></div>
             <div class="image">
                 <h2 id="latest">Karin Olsson</h2>
                 <div class="description">Legitimerad psykolog som erbjuder stöd vid sorg och förlust.</div>
@@ -108,6 +108,11 @@
                 <div class="description">Psykolog med inriktning på postpartum-depression och stöd för nyblivna föräldrar.</div>
             </div>
         </div>
+        <footer>
+            <h3><a href="about.html">Om oss</a></h3>
+            <h3>FAQ</h3>
+            <h3>Kundservice</h3>
+        </footer>
     </div>
 </body>
 </html>
